argocd-chart/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-ingress
  namespace: argocd
spec:
  ingressClassName: webapprouting.kubernetes.azure.com

  tls:
    - hosts:
        - argocd.emanuelabs.click
      secretName: emanuel-click

  rules:
    - host: argocd.emanuelabs.click
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: argocd-server
                port:
                  number: 80
